Bug 451509 - Disabling the Help Runner plugin does not hide the question mark button
Summary: Disabling the Help Runner plugin does not hide the question mark button
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.24.3
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-14 21:13 UTC by Peter Würth
Modified: 2022-04-03 18:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (212.79 KB, image/png)
2022-03-14 21:13 UTC, Peter Würth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Würth 2022-03-14 21:13:19 UTC
Created attachment 147499 [details]
screenshot

SUMMARY
In Plasma 5.24 KRunner introduced a new question mark button right to the search bar, that shows a list of available plugins and help on how to use them. See: https://kde.org/announcements/plasma/5/5.24.0
This question mark button is associated with plugin itself, called "Help Runner", that can be disabled in the settings. When doing so, the question mark button does not get hidden or disabled, but simply becomes functionless.

STEPS TO REPRODUCE
1. Open KRunner settings (KRunner > Configure KRunner  or  System Settings > Search > Plasma Search).
2. Disable the "Help Runner" plugin.
3. Open KRunner and click the question mark button or type "?".

OBSERVED RESULT
The question mark button is still there, but is without function. See the attached screenshot.

EXPECTED RESULT
The button should be at least disabled or preferably completely hidden.

SOFTWARE/OS VERSIONS
OS: Manjaro Linux 21.2.5
KDE Plasma Version: 5.24.3
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3
Comment 1 Nate Graham 2022-03-25 16:20:12 UTC
Yeah, makes sense.
Comment 2 Nate Graham 2022-04-03 18:51:06 UTC
Git commit ae89638eef8d2bcd1e06e8a83357f309c2ca1b58 by Nate Graham, on behalf of Alexander Lohnau.
Committed on 03/04/2022 at 18:41.
Pushed by ngraham into branch 'master'.

KRunner: Disable help button when runner is disabled

M  +2    -0    krunner/view.cpp
M  +10   -0    krunner/view.h
M  +1    -0    lookandfeel/contents/runcommand/RunCommand.qml

https://invent.kde.org/plasma/plasma-workspace/commit/ae89638eef8d2bcd1e06e8a83357f309c2ca1b58