KRunner: Disable help button when runner is disabled

BUG: 451509